examples/bad/bad_function_argument.soy
def f(ref x = 10) -> int { # ERROR: argument passed by reference cannot have default value
    return x;
}